syntax = "proto3";
package user;
import "hopeio/utils/patch/go.proto";
import "hopeio/utils/enum/enum.proto";
import "hopeio/time/time.proto";
import "hopeio/time/deletedAt/deletedAt.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option java_package = "xyz.hoper.protobuf.user";
option java_multiple_files = true;
option go_package = "github.com/liov/hoper/server/go/protobuf/user";

option (enum.gqlgen_all) = true;
option (go.file) = {no_enum_prefix:true};

// 用户
message User {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" comment:"昵称"'}];
  string account = 17 [(go.field) = {tags:'gorm:"size:36;not null;unique" validate:"required,gte=6,lte=20" comment:"账号"'}];
  string password = 5 [(go.field) = {tags:'json:"-" gorm:"size:32;not null" validate:"gte=8,lte=15" comment:"密码"'}];
  string mail = 6 [(go.field) = {tags:'gorm:"size:32" validate:"email" comment:"邮箱"'}];
  string phone = 7 [(go.field) = {tags:'gorm:"size:32" validate:"phone" comment:"手机号"'}];
  // 性别，0未填写，1男，2女
  Gender gender = 8 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  time.Date birthday = 9 [(go.field) = {tags:'gorm:"<-:false;type:date;index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    default:"2018-08-08",
    type: STRING}];
  string address = 14 [(go.field) = {tags:'gorm:"size:255"'}];
  string intro = 10 [(go.field) = {tags:'gorm:"size:255"'}];
  string signature = 11 [(go.field) = {tags:'gorm:"size:255"'}];
  string avatar = 12 [(go.field) = {tags:'gorm:"size:255"'}];
  string cover = 13 [(go.field) = {tags:'gorm:"size:255"'}];
  Role role = 24 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  string realName = 19 [(go.field) = {tags:'gorm:"size:5" comment:"实名"'}];
  string idNo = 18 [(go.field) = {tags:'gorm:"size:22" comment:"身份证号"'}];
  UserStatus status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time activatedAt = 3 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 26 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 27 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

message UserExt {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  time.Time lastActivatedAt = 23 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index" comment:"上次操作时间"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  uint64 score = 15 [(go.field) = {tags:'gorm:"default:0" comment:"分数"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title:"分数"
    type: INTEGER}];
  uint64 follow = 2 [(go.field) = {tags:'gorm:"default:0" comment:"关注数"'}];
  uint64 followed = 17 [(go.field) = {tags:'gorm:"default:0" comment:"被关注数"'}];
}

//关注表
message Follow {
  uint64 userId = 1 [(go.field) = {tags:'gorm:"index"'}];
  uint64 followId = 2 [(go.field) = {tags:'gorm:"default:0"'}];
  time.Time createdAt = 3 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  time.Time updatedAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 4 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  uint32 status = 5 [(go.field) = {tags:'gorm:"type:int2;"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }]; //状态：0无效，1有效
}

//用户分数变化日志
message ScoreLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  sint64 score = 3 [(go.field) = {tags: 'json:"score" gorm:""'}];
  string reason = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  time.Time createdAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
}
//用户封禁日志
message BannedLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  uint64 duration = 3 [(go.field) = {tags:'gorm:""'}];
  string reason = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  BannedType type = 5 ;
  time.Time createdAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
}

//用户操作日志
message ActionLog {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}];
  //类型
  Action action = 3;
  //相关id
  string relatedId = 4[(go.field) = {tags:'gorm:"size:255"'}];
  bytes lastValue = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  time.Time createdAt = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  string remark = 7 [(go.field) = {tags:'gorm:"size:255"'}];
  //设备
  AccessDevice device = 8 [(go.field) = {tags:'gorm:"embedded"'}];
  uint32 deviceId = 9;

}

//简历
message Resume {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  uint64 userId = 2 [(go.field) = {tags:'gorm:"index"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  // 公司或组织或学校
  string company = 3 [(go.field) = {tags:'gorm:"size:255"'}];
  // 职位或学历
  string title = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  // 部门或专业
  string department = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  time.Time beginTime = 6 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  time.Time endTime = 7 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  string remark = 11 [(go.field) = {tags:'gorm:"size:255"'}];
  // 0-Education 教育经历,1- Work 职业生涯
  uint32 type = 12 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 29 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  time.Time updatedAt = 30 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 31 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
}

message UserBase {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" comment:"名字"'}];
  uint64 score = 3 [(go.field) = {tags:'gorm:"default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title:"分数"
    type: INTEGER}];
  Gender gender = 8 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type:INTEGER
  }];
  string avatar = 12 [(go.field) = {tags:'gorm:"size:255"'}];
}


message Oauth {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" comment:\"名字\"'}];
  string mail = 6 [(go.field) = {tags:'gorm:"size:16" validate:"email" comment:"邮箱"'}];
  string location = 16[(go.field) = {tags:'gorm:"size:255"'}];
  string intro = 10 [(go.field) = {tags:'gorm:"size:255"'}];
  string avatar = 12 [(go.field) = {tags:'gorm:"size:255"'}];
}

// 每次
message AccessDevice {
  //设备
  string device = 1 [(go.field) = {tags:'gorm:"size:255"'}];
  string deviceNo = 2 [(go.field) = {tags:'gorm:"size:255"'}];
  string OS = 3 [(go.field) = {tags:'gorm:"size:255"'}];
  string appCode = 4 [(go.field) = {tags:'gorm:"size:255"'}];
  string appVer = 5 [(go.field) = {tags:'gorm:"size:255"'}];
  string IP = 6 [(go.field) = {tags:'gorm:"size:255"'}];
  double lng = 7 [(go.field) = {tags:'gorm:"type:numeric(10,6)"'}];
  double lat = 8 [(go.field) = {tags:'gorm:"type:numeric(10,6)"'}];
  string area = 9 [(go.field) = {tags:'gorm:"size:255"'}];
  string userAgent = 10 [(go.field) = {tags:'gorm:"size:255"'}];
}


message Device {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:255"'}];
  DeviceType deviceType = 3[(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  string manufacturer  = 4 [(go.field) = {tags:'gorm:"size:255" comment:"制造商"'}];
  string model   = 5 [(go.field) = {tags:'gorm:"size:255" comment:"型号"'}];
  string serialNo   = 6 [(go.field) = {tags:'gorm:"size:255" comment:"序列号"'}];
  string OS = 7 [(go.field) = {tags:'gorm:"size:255"'}];
  uint32 cpu = 8 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  uint32 ram = 9 [(go.field) = {tags:'gorm:"type:int8;default:0"'}];
  uint32 storage = 10 [(go.field) = {tags:'gorm:"type:int8;default:0"'}];
  double screenSize = 11 [(go.field) = {tags:'gorm:"type:int8;default:0"'}];
  time.Time createdAt = 29 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
  time.Time updatedAt = 30 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 31 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'},(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    type: STRING}];
}

// 用户授权信息
message Auth {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" comment:\"名字\"'}];
  Role role = 24 [(go.field) = {tags:'gorm:"type:int2;default:0"'}];
  UserStatus status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}


// 用户操作
enum Action {
  ActionPlaceholder = 0 [(enum.text)= "占位"];
  ActionSignup = 1 [(enum.text)= "注册"];
  ActionActive = 2 [(enum.text)= "激活"];
  ActionRestPassword = 3 [(enum.text)= "重置密码"];
  ActionEditPassword = 4 [(enum.text)= "修改密码"];
  ActionCreateResume = 5 [(enum.text)= "新建简历"];
  ActionEditResume = 6 [(enum.text)= "编辑简历"];
  ActionDeleteResume = 7 [(enum.text)= "删除简历"];
}
// 用户角色
enum Role {
  PlaceholderRole = 0 [(enum.text)= "占位"];
  RoleNormal = 1 [(enum.text)= "普通用户"];
  RoleAdmin = 2 [(enum.text)= "管理员"];
  RoleSuperAdmin = 3 [(enum.text)= "超级管理员"];
}

// 用户性别
enum Gender{

  GenderPlaceholder = 0 [(enum.text)= "占位"];
  GenderUnfilled = 1 [(enum.text)= "未填"];
  GenderMale = 2 [(enum.text)= "男"];
  GenderFemale = 3 [(enum.text)= "女"];
}

// 用户状态
enum UserStatus {
  option (enum.jsonmarshal) = false;
  UserStatusPlaceholder = 0 [(enum.text)= "占位"];
  UserStatusInActive = 1 [(enum.text)= "未激活"];
  UserStatusActivated = 2 [(enum.text)= "已激活"];
  UserStatusFrozen = 3 [(enum.text)= "已冻结"];
  UserStatusDeleted = 4 [(enum.text)= "已注销"];
}

// 封禁类型
enum BannedType{
  option (enum.jsonmarshal) = false;
  BannedTypePlaceholder = 0 [(enum.text)= "占位"];
  BannedTypePost = 1 [(enum.text)= "禁言"];
  BannedTypeLogin = 2 [(enum.text)= "禁止登录"];
}

enum UserErr {

  option (enum.errcode) = true;
  option (enum.jsonmarshal) = false;
  UserErrPlaceholder = 0 [(enum.text)= "占位"];
  UserErrLogin = 1000 [(enum.text)= "用户名或密码错误"];
  UserErrNoActive = 1001 [(enum.text)= "未激活账号"];
  UserErrNoAuthority = 1002 [(enum.text)= "无权限"];
  UserErrLoginTimeout = 1003 [(enum.text)= "登录超时"];
  UserErrInvalidToken = 1004 [(enum.text)= "Token错误"];
  UserErrNoLogin = 1005 [(enum.text)= "未登录"];
}

enum DeviceType {

  option (enum.errcode) = true;
  option (enum.jsonmarshal) = false;
  DeviceTypePlaceholder = 0 [(enum.text)= "占位"];
  DeviceTypePhone = 1 [(enum.text)= "手机"];
  DeviceTypePC = 2 [(enum.text)= "电脑"];
  DeviceTypePad = 3 [(enum.text)= "平板"];
  DeviceTypeWatch = 4 [(enum.text)= "手表"];

}